--- a/cic.ipynb
+++ b/cic.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "%matplotlib ipympl\n",
+    "\n",
     "N_FFT=8192"
    ]
   },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15c326f57394418a9723871326319810",
+       "model_id": "bf6a56f320194ea8ae240c4007d2e9a2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -133,18 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/179889711.py:8: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/179889711.py:8: RuntimeWarning: divide by zero encountered in log10\n",
       "  plt.plot(20*np.log10(np.abs(amp)))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/179889711.py:16: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/179889711.py:16: RuntimeWarning: divide by zero encountered in log10\n",
       "  plt.plot(20*np.log10(np.abs(amp)))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/179889711.py:24: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/179889711.py:24: RuntimeWarning: divide by zero encountered in log10\n",
       "  plt.plot(20*np.log10(np.abs(amp)))\n"
      ]
     },
@@ -154,14 +154,14 @@
        "Text(0.5, 1.0, 'k=140')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38de5a2dae634ab9a6eceb7f155da88d",
+       "model_id": "9fe42b7de96748ae9cdc5d0da7be2956",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,61 +224,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:12: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n",
-      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_3332/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
+      "C:\\Users\\hj\\AppData\\Local\\Temp/ipykernel_11688/4196981257.py:24: RuntimeWarning: divide by zero encountered in log10\n",
       "  ydb=20*np.log10(np.abs(amp))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1b82c9b8820>"
+       "<matplotlib.legend.Legend at 0x1a23b62eaf0>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc83ec5680a3437d8f56f7414ab4a08d",
+       "model_id": "823ff14c7b09425585bb53e95f580ef3",
        "version_major": 2,
        "version_minor": 0
       },
